--- a/src/App3.css
+++ b/src/App3.css
@@ -1,4 +1,4 @@
-svg{
+#a3{
   background: #eee;
   overflow:visible;
   
@@ -6,7 +6,7 @@ svg{
   width: 100%;
 }
 
-#root{
+root{
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -15,7 +15,7 @@ svg{
   padding: 0 50px;
 }
 
-button{
+.b3{
   width: 100px;
   border: 1px solid black;
   margin: 0 auto 5px;
