--- a/src/App5.css
+++ b/src/App5.css
@@ -1,4 +1,4 @@
-svg{
+#a5{
   background: #eee;
   width: 600px;
   height: 400px;
@@ -8,7 +8,7 @@ svg{
   border-color: black;
   border-style:groove;
 }
-button{
+.b5{
   margin-left: 80px;
   width:60px;
   height: 30px;
