--- a/src/App6.css
+++ b/src/App6.css
@@ -1,11 +1,10 @@
-svg{
+#a6{
   background: #eee;
-  width: 600px;
-  height: 400px;
+  width: 347px;
+  height: 200px;
   margin : 10px;
   border :21px;
   border-width: 3px;
   border-color: black;
   border-style:groove;
-  overflow:visible;
 }
