--- a/src/tba/TBA1.css
+++ b/src/tba/TBA1.css
@@ -1,10 +1,22 @@
 
-#tba_1_div{
-  width: 780px;
-  height: 340px;
-  margin-top: 100px;
-  background-color: tomato;
+#root {
+  max-width: 600px;
+  max-height: 500px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  justify-content: center;
+  height: 100vh;
+  padding: 100px 50px 150px;
+  text-align: center;
+  box-sizing: border-box;
+  font-family: Noto Sans CJK KR;
+  background-color: #FCFCFC;
 }
 
-
+#checkDataDate button{
+  display:contents;
+  outline: 0;
+}
 
