--- a/src/tba/TBA1.css
+++ b/src/tba/TBA1.css
@@ -20,3 +20,15 @@
   outline: 0;
 }
 
+svg {
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: #f7f7f7;
+  overflow: visible;
+}
+
+.field {
+  display: inline-block;
+  margin: 0 0.5em;
+}
