--- a/src/tba/TBA1.css
+++ b/src/tba/TBA1.css
@@ -1,8 +1,11 @@
 
+  #aaaa{
+    max-width: 600px;
+    max-height: 500p;
+  }
 #root {
-  max-width: 600px;
-  max-height: 500px;
   margin: 0 auto;
+  padding: 0;
   display: flex;
   flex-direction: column;
   align-items: stretch;
@@ -13,6 +16,7 @@
   box-sizing: border-box;
   font-family: Noto Sans CJK KR;
   background-color: #FCFCFC;
+  
 }
 
 #checkDataDate button{
@@ -28,7 +32,63 @@ svg {
   overflow: visible;
 }
 
+svg > g > g:last-child { pointer-events: none }
+
 .field {
   display: inline-block;
   margin: 0 0.5em;
+}
+.tba2{
+  font-family: "NotoSansCJKkr-Regular, Noto Sans CJK KR";
+  font-size: 14px;
+  border: 1px solid #d4d5df;
+  border-radius: 5.5%;
+  vertical-align: middle;
+  justify-content: center;
+  width: 15%;
+  height: 40px;
+}
+
+#tba2 {
+  background-color: #d4d5df;
+  border: #d4d5df solid 1px;
+  border-radius: 5px;
+  font-size: 12px;
+  font-weight: 500;
+  height: auto;
+  letter-spacing: -0.25px;
+  margin-top: 6.8px;
+  padding: 5px 11px;
+  position: absolute;
+  width: fit-content;
+  z-index: 100;
+}
+
+#tba2::after {
+  border-color: white transparent;
+  font-size: 12px;
+  font-weight: 500;
+  border-style: solid;
+  font-family: "NotoSansCJKkr-Regular, Noto Sans CJK KR";
+  border-width: 8px 6.5px 0 6px;
+  content: '';
+  display: block;
+  left: 50%;
+  position: absolute;
+  bottom: -7px;
+  width: 0;
+  z-index: 1;
+}
+
+#tba2::before {
+  border-color: #d4d5df transparent;
+  border-style: solid;
+  border-width: 8px 6.5px 0 6px;
+  content: '';
+  display: block;
+  left: 50%;
+  position: absolute;
+  bottom: -8px;
+  width: 0;
+  z-index: 0;
 }
